# simple_legal_ai

./: .gitignore  raw_subtext.txt  restored_App.tsx  sample_judgment.txt  step_93_payload.json  test_patil_judgment.txt
backend/: .env.example  README.md  config.py  init_db.py  legal_timeline.db-shm  legal_timeline.db-wal  main.py  pyproject.toml  requirements.txt  run_graph_test.py
backend/api/: __init__.py  routes.py
backend/db/: __init__.py  base.py  models.py  seed.py
backend/graph/: __init__.py  builder.py
backend/ingestion/: __init__.py  s3_streamer.py
backend/ingestion/mock_data/: judgments.json
backend/nlp/: __init__.py  extractor.py  metadata_extractor.py  pdf_parser.py  pipeline.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_graph.py  test_ingestion.py  test_nlp.py  test_schema.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: NetworkGraphCanvas.tsx
