[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legal-timeline-backend"
version = "0.1.0"
description = "Automatic Legal Timeline Construction and Visualization using Temporal Event Graphs – Phase 1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "networkx>=3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["db", "ingestion"]
